# haybox-cli

./: .gitmodules  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  pyinstaller.yml
haybox/: haybox.py
src/haybox_cli/: main.py
