[tool.poetry]
name = "haybox-cli"
version = "0.1.5"
description = "Command line app for interacting with HayBox firmware"
authors = ["Jonathan Haylett <jonathan@haylett.dev>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "haybox_cli", from = "src"}]

[tool.poetry.scripts]
haybox = "haybox_cli:main.main"

[tool.poetry-pyinstaller-plugin.scripts]
haybox = { source = "src/haybox_cli/main.py", type = "onefile", bundle = false }

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
haybox = "0.1.4"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.66.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
